--- a/mywebsite/pom.xml
+++ b/mywebsite/pom.xml
@@ -53,6 +53,11 @@
 			<version>8.0.15</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>10.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
