--- a/mywebsite/pom.xml
+++ b/mywebsite/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>primefaces</artifactId>
 			<version>10.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
